[tool.poetry]
name = "pkg-from-github"
version = "0.1.0"
description = ""
authors = ["Cesar Merjan <cesarmerjan@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
